--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.2",
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "datepickr": "^1.4.2",
+        "flatpickr": "^4.6.13"
     }
 }
