--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "twilio/sdk": "^8.1"
+
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
