--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,22 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/vonage-notification-channel": "^3.3",
         "laravelcollective/html": "^6.4",
+        "nyholm/psr7": "^1.8",
+        "php-http/httplug": "^2.4",
+        "php-http/message-factory": "^1.1",
         "realrashid/sweet-alert": "^7.1",
-        "twilio/sdk": "^8.1"
-
-
+        "spatie/html-element": "^1.1",
+        "spatie/laravel-html": "^3.9",
+        "symfony/http-client": "^7.1",
+        "twilio/sdk": "^8.1",
+        "vonage/client": "^4.0",
+        "vonage/vonage-laravel": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
