--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^6.5.2",
         "bootstrap": "^5.3.3",
         "datepickr": "^1.4.2",
-        "flatpickr": "^4.6.13"
+        "flatpickr": "^4.6.13",
+        "froala-editor": "^4.2.1"
     }
 }
