--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "artesaos/seotools": "^1.3",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
@@ -18,6 +19,7 @@
         "realrashid/sweet-alert": "^7.1",
         "spatie/html-element": "^1.1",
         "spatie/laravel-html": "^3.9",
+        "spatie/laravel-sitemap": "^7.2",
         "symfony/http-client": "^7.1",
         "twilio/sdk": "^8.1",
         "vonage/client": "^4.0",
